Added menu navigation

--- a/mainPage.html
+++ b/mainPage.html
@@ -1,6 +1,7 @@
 <html>
-<head><title>New repo</title></head>
-<body>
-<p>Hello I am new paragraph!!!</p>
-</body>
+  <head><title>New repo</title></head>
+  <body>
+    <a href = '#'> Menu + </a>
+    <p>Hello I am new paragraph!!!</p>
+  </body>
 </html>
